some minor changes

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -76,7 +76,7 @@
 \title{\textbf{Internet of Things }\\ % Title
 Developing an optimal wireless power transfer system for a real-world low power LED wristband application} % Subtitle
 
-\author{\textsc{Muhammad Wasif xxxxxxx\\
+\author{\textsc{Muhammad Wasif 4321928\\
 Imara Speek 1506374} % Author
 \\{\textit{Delft University of Technology}}} % Institution
 
