--- a/state.tex
+++ b/state.tex
@@ -1,6 +1,6 @@
 % state diagrams
 %
-The major goal of this report is to develop a real-world application. In order to do this, all real-world implications need to be taken into consideration. There are certain states in which the system can reside depending on its own battery state, the battery state of neighbour nodes and the availability of a energy bar or energy checkpoint. These states and their transmissions are displayed in figure \ref{fig:states}. The battery can either be sufficiently full when exceeding $V_{full}$, in a starving state when in between $V_{full}$ and $V_{starve}$ or in a depleted state when it drops below $V_{dead}$. These parameters are further specified in section \ref{sec:proposed}. With help of the state diagram we can write protocols to accomodate the state changes. The figure displays a composed state called capable. This state encapsulates the behavior of the product whenever it is capable of doing something functional such as charging and running a show. 
+The major goal of this report is to develop a real-world application. In order to do this, all real-world implications need to be taken into consideration. There are certain states in which the system can reside depending on its own battery state, the battery state of neighbour nodes and the availability of a energy bar or energy checkpoint. These states and their transmissions are displayed in figure \ref{fig:states}. The battery can either be sufficiently full when exceeding a limit $V_{full}$, in a starving state when in between $V_{full}$ and $V_{starve}$ or in a depleted state when it drops below $V_{dead}$. These parameters are further specified in Section \ref{sec:charging}. With help of the state diagram we can write protocols to accomodate the state changes. The figure displays a composed state called capable. This state encapsulates the behavior of the product whenever it is capable of doing something functional such as charging and running a show. 
 
 \begin{figure}[h!]
 \centering
