--- a/batterylife.tex
+++ b/batterylife.tex
@@ -1,6 +1,8 @@
-The battery that we are using has a capacity of 50 mAh, which means if current $I_B$ of 50 mA  is continuously drawn from the battery then it can last for one hour. To find out total battery life for our circuit we need to consider the total power consumed $P_c$, for our case $P_c = i_L \times V_l $ from which we can calculate total life of fully charged battery.
+The battery that we are using has a capacity of 50 mAh, which means if a current $I_B$ of 50 mA  is continuously drawn from the battery, it can last for one hour. To determine the total battery life for our circuit we need to consider the total power consumed $P_c$, for our case $P_c = i_L \times V_l $ from which we can calculate the total life of a fully charged battery.
 
+\begin{center}
  $Total Battery Life = \frac{Battery Capacity}{Power Consumed}$
                     $= \frac{I_B \times V_l \times 1 hour}{i_L \times V_l}$
                     $= \frac{50mA \times 3V \times 1 hour}{20mA \times 3V}$
                     $= 2.5 hours$
+\end{center}
