--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -211,11 +211,11 @@ Imara Speek 1506374} % Author
 % how should the protocols be included
 % schematic of the internet of things
 
-\subsection{The WeLight}
-\label{sec:WeLight}
-\input{welight}
-% Show the end product
-% present the solidworks model
+%\subsection{The WeLight}
+%\label{sec:WeLight}
+%\input{welight}
+%% Show the end product
+%% present the solidworks model
 
 %----------------------------------------------
 
@@ -266,6 +266,7 @@ Imara Speek 1506374} % Author
 
 %----------------------------------------------------------------------------------------
 
+\newpage
 \appendix
 \section{Arduino Pro Mini code}
 
