added dimensions image, line about V limits and future works

--- a/charging.tex
+++ b/charging.tex
@@ -12,4 +12,4 @@ where $R_c$ is the series limiting resistance of the receiver circuit whose valu
 \label{fig:ch_profile}
 \end{figure}
 
-Figure \ref{fig:ch_profile} displays the charging, discharging and idle profile of the supercapacitor during system operation. In the initial charging cycle $t_{ci}$, $C_s$ is charged using $i_r(t)$ following equation \ref{eq:cap}. During the discharge cycle $t_d$, the $i_r(t) = 0$ and the discharge current is supplied in the form of $i_b$ and $i_L$. Finally during the equilibrium cycle $t_{eq}$ the voltage is reduced to equal the battery voltage ($V_l = 3$ V) such that no current flows between the battery and the supercapacitor and $i_b = 0$. At this stage only the battery's charge is used to power the LED. At last during the second charge cycle $t_{c2}$, the capacitor starts charging from an equilibrium voltage instead of 0 and is charged to $V_{reg}$ untill the discharge cycle starts again.
+Figure \ref{fig:ch_profile} displays the charging, discharging and idle profile of the supercapacitor during system operation. In the initial charging cycle $t_{ci}$, $C_s$ is charged using $i_r(t)$ following equation \ref{eq:cap}. During the discharge cycle $t_d$, the $i_r(t) = 0$ and the discharge current is supplied in the form of $i_b$ and $i_L$. Finally during the equilibrium cycle $t_{eq}$ the voltage is reduced to equal the battery voltage ($V_l = 3$ V) such that no current flows between the battery and the supercapacitor and $i_b = 0$. At this stage only the battery's charge is used to power the LED. At last during the second charge cycle $t_{c2}$, the capacitor starts charging from an equilibrium voltage instead of 0 and is charged to $V_{reg}$ untill the discharge cycle starts again. From the above figure we were able to determine appropriate values for the voltage limits as discussed in Section \ref{sec:states}.We choose $V_{max}$ = 3,2V, $V_{full}$ = 3,0V and the starving limit $V_{starving}$ = 2,4V. These values can also be found in the code in the appendix. 
