--- a/future.tex
+++ b/future.tex
@@ -1,11 +1,13 @@
+% Future works
+%
+In this report we tried to convey the start of a wireless power transfer specific model of a low power LED wristband application, extended with the element of Internet of Things. A couple of weeks is hardly enough time to create a beta version of the product. Therefore a lot of iterations in the design of the wireless power transfer system still have to be done. The major technical challenge of this report is to achieve a large value for the charge to discharge ratio, which means that during the charging cycle one has to provide large amount of wireless power. This can be achieved by using high power IC's that can withstand high currents without any failure. This would mean buying a lot of components in order to improve the quality of the system and test various components. 
+
+Other challenges involve making the system compact enough so that it can fit in one wrist-band and increasing the distance between the wireless transceiver and receiver. Increasing the distance without losing significant efficiency would require a completely new technique in wireless power transmission which is still a hot topic of research. However, making the system compact can be achieved by taking extra care in selecting the components which may require exploring many different vendors. Another way of increasing the efficiency of the wireless power transmitting system would be to place an iron core in the middle of the coils. We did not research further in this as we also needed to place the components in this position. However in future work a combination of components and iron cores in the middle of the coils need to be looked into. 
+
+If we would want to combine the wireless power transfer system into the actual Drome application we would need to research into the combination or alternation of RF communication and energy transfer. The Drome system is driven by a central RF transmitter that sends the executions to all unique wristbands whilst they are in a running state. The energy packets received by the wireless power transfer system should not interfer with the general function of the wristband. 
+
+We could also look into introducing the Internet of Things in a more detailed way. By attending certain festivals and performing user research we could find more interesting fields in whichs users and the festival can stay connected in an informative and empowering way, which in the end is the goal of Internet of Things. 
 
 
-Say something about future work
-
-might need to find out if the radio frequency communication does not interfer with the charging and vice versa
-
-maybe they can introduce some kind of pattern recognition in where people are at the festival by checking the RFID tags. 
 
 
-The major technical challenge is to achieve large value for charge to discharge ratio, which means that during the charging cycle one has to provide large amount of wireless power. This can be achieved by using high power IC's that can with stand high currents without any failure. 
-Other challenges involve making the system compact enough so that it can fit in one wrist-band and increasing the distance between the wireless transceiver and receiver. Increasing the distance without losing significant efficiency would require a completely new technique in wireless power transmission which is still a hot topic of research. However, making the system compact can be achieved by taking extra care in selecting the components which may require exploring many different vendors.
