--- a/results.tex
+++ b/results.tex
@@ -10,18 +10,14 @@ Figure \ref{fig:results} shows charge to discharge ratio from the practical syst
 \end{figure}
 %
 
-
 %---------- The dimension figure goes here
-%
-%\begin{figure}[h!]
-%\centering
-%\includegraphics[width=0.8\textwidth]{dimension.pdf}
-%\caption{Dimension}
-%\label{fig:dimension}
-%\end{figure}
-%
 
-
+\begin{figure}[h!]
+\centering
+\includegraphics[width=0.9\textwidth]{dimension.pdf}
+\caption{Orientations of the test set-up}
+\label{fig:dimension}
+\end{figure}
 
 %-----------------------Table ----------------------------------------
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} |l|l|}
