conclusions and reults edited , proof reading yet to be done

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,1 +1,1 @@
-conclusion
+A wireless power transmission system based on the principal of magnetic coupling was used and analyzed. A wristband system application was purposed and additional components were added to aid the feasibility of that application. The performance in terms of efficiency and charge to discharge ratio of the wristband system was analyzed. Additional components, super capacitor and high power constant current charger, were purposed to further enhance the performance. Based on different scenarios, protocols were introduced to efficiently define the complete working of the application and the Arduino platform was used for the realization of these protocols. Finally some comparisons were made between theoretical and practical results and the reasons for their differences were discussed.
